--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,16 @@
  <title>Document</title>
 
  <!-- boostrap files-->
- <link rel="stylesheet" href="./css/bootstrap.min.css">
+ <link rel="stylesheet" href="../css/bootstrap.min.css">
  
  
  <!--  font awesome icons  -->
- <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+ <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
 
  <!-- CSS LINK -->
- <link rel="stylesheet" href="./CSS/style.css">
- <link rel="stylesheet" href="w3.css">
+ <link rel="stylesheet" href="../CSS/all.min.css">
+ <link rel="stylesheet" href="../CSS/style.css">
+ <link rel="stylesheet" href="./w3.css">
  
 
 </head>
@@ -24,7 +25,7 @@
   <div class="main-menu">
    <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-white">
     <a class="navbar-brand" href="#">
-     <img src="./image/logo.png" alt="">
+     <img src="../image/logo.png" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +83,7 @@
     </div>
    </div>
    <div class="col-md-6 mx-auto md-pt-5">
-    <img src="./image/banner.png" alt="banner" style="width: 100%;">
+    <img src="../image/banner.png" alt="banner" style="width: 100%;">
    </div>
   </div>
  </div>
@@ -92,7 +93,7 @@
  <div class="container">
   <div class="row">
    <div class="col-md-6 mx-auto">
-    <img src="./image/banner2.jpg" style="width: 100%;" alt="">
+    <img src="../image/banner2.jpg" style="width: 100%;" alt="">
    </div>
    <div class="col-md-6 mx-auto">
     <h2 style="letter-spacing: 0.3rem; text-transform: uppercase; text-decoration: underline darkslateblue;">let me introduce my self</h2>
@@ -115,22 +116,22 @@
   </div>
   <div class="row">
    <div class="py-3 col-md-5 col-lg-4 mx-auto text-center">
-    <img src="./image/s1.png" alt="service">
+    <img src="../image/s1.png" alt="service">
     <h5 class="text-uppercase">wp developer</h5>
     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
    </div>
    <div class="py-3 col-md-5 col-lg-4 mx-auto text-center">
-    <img src="./image/s2.png" alt="service">
+    <img src="../image/s2.png" alt="service">
     <h5 class="text-uppercase">ux/ui design</h5>
     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
    </div>
    <div class="py-3 col-md-5 col-lg-4 mx-auto text-center">
-    <img src="./image/s3.png" alt="service">
+    <img src="../image/s3.png" alt="service">
     <h5 class="text-uppercase">react.j dev</h5>
     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
    </div>
    <div class="py-3 col-md-5 col-lg-4 mx-auto text-center">
-    <img src="./image/s4.png" alt="service">
+    <img src="../image/s4.png" alt="service">
     <h5 class="text-uppercase">seo optimize</h5>
     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
    </div>
@@ -154,13 +155,13 @@
      </ol>
      <div class="carousel-inner">
       <div class="carousel-item active">
-       <img src="./image/react_certificate.jpg" class="d-block w-100" style="height: 50vh;" alt="...">
+       <img src="../image/react_certificate.jpg" class="d-block w-100" style="height: 50vh;" alt="...">
       </div>
       <div class="carousel-item">
-       <img src="./image/waec.jpg" class="d-block w-100" style="height: 50vh;" alt="...">
+       <img src="../image/waec.jpg" class="d-block w-100" style="height: 50vh;" alt="...">
       </div>
       <div class="carousel-item">
-       <img src="./image/jQuery_certificate.jpg" class="d-block w-100" alt="..." style="height: 50vh;">
+       <img src="../image/jQuery_certificate.jpg" class="d-block w-100" alt="..." style="height: 50vh;">
       </div>
      </div>
      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -197,28 +198,28 @@
   <div class="row">
    <div class="col-sm-9 col-md-6 col-lg-3">
     <div class="card mx-auto">
-     <img src="./image/testimonials/t1.jpg" style="width: 100%;" alt="">
+     <img src="../image/testimonials/t1.jpg" style="width: 100%;" alt="">
      <h5>louis catar</h5>
      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium ut vel nam cumque laborum architecto.</p>
     </div>
    </div>
    <div class="col-sm-9 col-md-6 col-lg-3">
     <div class="card mx-auto">
-     <img src="./image/testimonials/t1.jpg" style="width: 100%;" alt="">
+     <img src="../image/testimonials/t1.jpg" style="width: 100%;" alt="">
      <h5>louis catar</h5>
      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium ut vel nam cumque laborum architecto.</p>
     </div>
    </div>
    <div class="col-sm-9 col-md-6 col-lg-3">
     <div class="card mx-auto">
-     <img src="./image/s4.jpg" style="width: 100%;" alt="">
+     <img src="../image/s4.jpg" style="width: 100%;" alt="">
      <h5>louis catar</h5>
      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium ut vel nam cumque laborum architecto.</p>
     </div>
    </div>
    <div class="col-sm-9 col-md-6 col-lg-3">
     <div class="card mx-auto">
-     <img src="./image/testimonials/t2.jpg" style="width: 100%;" alt="">
+     <img src="../image/testimonials/t2.jpg" style="width: 100%;" alt="">
      <h5>louis catar</h5>
      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium ut vel nam cumque laborum architecto.</p>
     </div>
@@ -231,7 +232,8 @@
  <div class="container-fluid footer">
   <div class="row">
    <div class="col-md-8 mx-auto">
-    <div class="text-center text-uppercase my-2 pt-2">
+    <div class="text-center text-uppercase my-2 pt-2
+    ">
      <h3 style="font-weight: 900; text-decoration: underline darkslateblue;">GET UPDATE FROM ANYWHERE</h3>
     </div>
     <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, cum.</p>
@@ -242,7 +244,7 @@
      <button class="btn btn-outline-danger px-4 text-uppercase">subscribe</button>
     </div>
     <div class="d-block text-center m-2">
-     <img src="./image/logo.png" alt="">
+     <img src="../image/logo.png" alt="">
      <h3 class="p-2 text-bold">FOLLOW ME</h3>
     </div>
     <div class="text-center text-primary">
@@ -275,10 +277,10 @@
 
 
  <!--  Jquery js file  -->
- <script src="./js/jquery.3.4.1.js"></script>
+ <script src="../js/jquery.3.4.1.js"></script>
  
  <!--  Bootstrap js file  -->
- <script src="./js/bootstrap.min.js"></script>
+ <script src="../js/bootstrap.min.js"></script>
 
 <body>
  
